2010-01-21  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/oap.xsl (user) [edit]: Switch the modify_password values.

2010-01-21  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/oap.xsl (user): Account for "custom" access rules.

2010-01-20  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/oap.xsl (user) [edit]: Make the Host Access radios match
	the user's rights.

2010-01-20  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad.c (exec_omp_post): Revert create_target hosts validator to
	"hosts".

2010-01-20  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl: Make all alt's "Details" for details buttons.

2010-01-20  Matthew Mundell <matthew.mundell@intevation.de>

	Add user details page and editing of user details.

	* src/gsad.c (init_validator): Add "edit_user", "get_user" and "save_user"
	commands.  Add rule "modify_password".
	(struct req_parms): Add modify_password.
	(free_resources, serve_post): Add modify_password handling.
	(exec_omp_post): Add save_user command.
	(exec_omp_get): Add edit_user and get_user commands.

	* src/gsad_oap.c (save_user_oap, edit_user_oap, get_user_oap): New
	functions.

	* src/gsad_oap.h: Add headers accordingly.

	* src/html/src/oap.xsl (html-create-user-form): Order options
	alphabetically, and force selection of "User".
	(user): Add details and edit buttons.
	(user) [details] [edit]: New templates.
	(edit_user, get_user): New templates.

2010-01-19  Matthew Mundell <matthew.mundell@intevation.de>

	Add user host access to user list.  Make "Allow All" possible when
	creating a user.

	* src/gsad.c (init_validator): Add "access_hosts" rule.  Add 2 to
	"hosts_allow".
	(struct req_parms): Add access_hosts.
	(free_resources, serve_post): Add access_hosts handling.
	(exec_omp_post): Pass access_hosts instead of hosts to create_user_oap.

	* src/gsad_oap.c (create_user_oap): Leave out HOSTS if hosts_allow is 2.
